# flocus

./: .gitignore  LICENSE  Makefile  README.md  TIMER_STATE_FIX.md  docker-compose.yml  package-lock.json  pnpm-lock.yaml  prd_embed_time_windows.md
backend/: .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
backend/app/: main.py  mcp_server.py
backend/app/api/endpoints/: categories.py  daily_plans.py  day_templates.py  tasks.py  time_windows.py  user_daily_stats.py  users.py
backend/app/api/schemas/: category.py  daily_plan.py  day_template.py  llm.py  task.py  time_window.py  user.py  user_daily_stats.py  utils.py
backend/app/clients/llm/: base.py  google_gemini.py  openai.py
backend/app/core/: config.py  dependencies.py  enums.py  exceptions.py  logger.py  logging_config.py  middleware.py  security.py
backend/app/db/: connection.py
backend/app/db/models/: category.py  daily_plan.py  day_template.py  task.py  time_window.py  user.py  user_daily_stats.py
backend/app/mappers/: README.md  base_mapper.py  category_mapper.py  daily_plan_mapper.py  day_template_mapper.py  task_mapper.py  time_window_mapper.py  user_mapper.py
backend/app/models/: user.py
backend/app/services/: __init__.py  category_service.py  daily_plan_service.py  day_template_service.py  llm_service.py  task_service.py  time_window_service.py  user_daily_stats_service.py  user_service.py
backend/scripts/: backup_database.py
backend/tests/: conftest.py  test_api_endpoints.py  test_authentication.py  test_error_handling.py  test_user_model.py
backend/tests/api/endpoints/: conftest.py  test_categories.py  test_daily_plans.py  test_day_templates.py  test_tasks.py  test_tasks_manual_time.py  test_time_windows.py  test_user_daily_stats.py  test_users.py
backend/tests/api/schemas/: test_day_template.py  test_task_schema.py  test_task_update_request.py  test_time_window.py  test_utils.py
backend/tests/clients/llm/: test_llm_clients.py
backend/tests/db/models/: test_user.py
backend/tests/mappers/: test_daily_plan_mapper.py  test_day_template_mapper.py  test_task_mapper.py  test_time_window_mapper.py  test_user_mapper.py
backend/tests/scripts/: test_backup_database.py
backend/tests/services/: conftest.py  test_category_service.py  test_daily_plan_service.py  test_llm_service.py  test_task_service.py  test_task_service_manual_time.py  test_user_daily_stats_service.py
bruno/: bruno.json
frontend/: DEVELOPMENT_TOOLS.md  (+9 more)
(+266 files in other folders)
